--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
-forge_version=14.23.5.2814
+mc_version=1.12.2
+wizardry_version=4.2.11
