--- a/src/main/resources/ancientspellcraft_at.cfg
+++ b/src/main/resources/ancientspellcraft_at.cfg
@@ -1,8 +1,8 @@
 #Ancient Spellcraft Access Transformer Configuration
 
-public net.minecraft.entity.monster.EntityZombieVillager func_191991_a(Ljava/util/UUID;I)V #startConverting
-
-public net.minecraft.entity.EntityLivingBase func_175136_bO()V #markPotionsDirty
+#public net.minecraft.entity.monster.EntityZombieVillager func_191991_a(Ljava/util/UUID;I)V #startConverting
+#
+#public net.minecraft.entity.EntityLivingBase func_175136_bO()V #markPotionsDirty
 
 
 #net.minecraft.entity.monster.EntityZombieVillager.startConverting
