updated to ForgeGradle5, added alpha build publishing logic. Special thanks to its_meow!

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,46 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
-mc_version=1.12.2
-mc_version_short=1.12
-wizardry_version=4.3.4
-baubles_version=1.5.2
-mod_version=1.2.0
-jei_version=4.15.0.291
+# Project Settings
+    mod_version=1.2.0
+    mod_id=ancientspellcraft
+    maven_group=com.windanesz.ancientspellcraft
+# Forge Settings
+    mc_version=1.12.2
+    mc_version_short=1.12
+    forge_version=14.23.5.2854
+    mappings_version=39
+    mappings_channel=stable
+    mappings_mc_version=1.12
+# Publishing
+    github=WinDanesz/AncientSpellcraft
+    name=Ancient Spellcraft
+    url=https://betteranimalsplus.com
+    curse_project_id=358124
+    curse_title=Ancient Spellcraft 1.12.2-1.2.0
+    curse_versions=Java 8,Forge,Minecraft 1.12:1.12.2
+    hook_content=<@&658183075255025664>
+# Dependencies
+    # CF: electroblobs-wizardry
+    wizardry_projectid=265642
+    wizardry_version=4.3.4
+    # v4.3.4, ElectroblobsWizardry-4.3.4-MC1.12.2.jar
+    wizardry_fileid=3189062
+    # CF: baubles
+    baubles_projectid=227083
+    baubles_version=1.5.2
+    # v1.5.2, Baubles-1.12-1.5.2.jar
+    baubles_fileid=2518667
+    # CF: jei
+    jei_projectid=238222
+    #jei_version=4.15.0.291
+    ## v4.15.0.291, jei_1.12.2-4.15.0.291.jar
+    #jei_fileid=2803400
+    jei_version=4.16.1.302
+    # v4.15.0.291, jei_1.12.2-4.16.1.302.jar
+    jei_fileid=3043174
+    # CF: artemislib
+    artemislib_projectid=313590
+    artemislib_version=1.0.6
+    # v1.0.6, ArtemisLib-1.12.2-v1.0.6.jar
+    artemislib_fileid=2741812
+# Gradle
+    org.gradle.jvmargs=-Xmx3G
+    org.gradle.daemon=false
