--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,6 +5,8 @@ on:
       - '[0-9]**'
     paths-ignore:
       - '*.md'
+      - '.github/**'
+      - '.forge/**'
       - LICENSE
     tags-ignore:
       - '[0-9]+.[0-9]+.[0-9]+-[0-9]+.[0-9]+.[0-9]+'
