--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Project Settings
-    mod_version=1.2.0
+    mod_version=1.2.1
     mod_id=ancientspellcraft
     maven_group=com.windanesz.ancientspellcraft
 # Forge Settings
@@ -12,9 +12,9 @@
 # Publishing
     github=WinDanesz/AncientSpellcraft
     name=Ancient Spellcraft
-    url=https://betteranimalsplus.com
+    url=https://www.curseforge.com/minecraft/mc-mods/ancient-spellcraft
     curse_project_id=358124
-    curse_title=Ancient Spellcraft 1.12.2-1.2.0
+    curse_title=Ancient Spellcraft 1.12.2-1.2.1
     curse_versions=Java 8,Forge,Minecraft 1.12:1.12.2
     hook_content=<@&658183075255025664>
 # Dependencies
