--- a/gradle.properties
+++ b/gradle.properties
@@ -2,24 +2,28 @@
     mod_version=1.4.1
     mod_id=ancientspellcraft
     maven_group=com.windanesz.ancientspellcraft
+    name=Ancient Spellcraft by Dan
+    jar_name=AncientSpellcraft
+    description=Ancient Spellcraft is an addon mod for Electroblob's Wizardry, adding many new spells, mechanics, blocks and a new magical element to the game.
+    url=https://www.curseforge.com/minecraft/mc-mods/ancient-spellcraft
 # Forge Settings
     mc_version=1.12.2
-    forge_version=14.23.5.2854
+    mc_version_short=1.12
+    forge_version=14.23.5.2860
     mappings_version=39
     mappings_channel=stable
     mappings_mc_version=1.12
 # Publishing
     github=WinDanesz/AncientSpellcraft
-    name=Ancient Spellcraft
-    url=https://www.curseforge.com/minecraft/mc-mods/ancient-spellcraft
     curse_project_id=358124
-    curse_title=Ancient Spellcraft 1.12.2-1.2.2
+    curse_relations = electroblobs-wizardry:requiredDependency,antique-atlas:optionalDependency,baubles:optionalDependency,jei:optionalDependency,artemislib:optionalDependency,patchouli:optionalDependency
     curse_versions=Java 8,Forge,Minecraft 1.12:1.12.2
-    hook_content=<@&952311479107989594>
-# Dependencies
+    hook_content=<@&658183075255025664>
+# Required Dependencies
     wizardry_projectid=265642
     wizardry_version=4.3.6
     wizardry_fileid=3679868
+# Optional Dependencies
     baubles_projectid=227083
     baubles_version=1.5.2
     baubles_fileid=2518667
