--- a/src/main/resources/assets/ancientspellcraft/models/item/battlemage_sword_apprentice_earth.json
+++ b/src/main/resources/assets/ancientspellcraft/models/item/battlemage_sword_apprentice_earth.json
@@ -1,8 +1,7 @@
 {
 	"parent": "item/handheld",
 	"textures": {
-		"0": "ancientspellcraft:items/battlemage_sword_apprentice_earth",
-		"particle": "ancientspellcraft:items/battlemage_sword_apprentice_earth"
+		"layer0": "ancientspellcraft:items/battlemage_sword_apprentice_earth"
 	}
 }
 
