--- a/.github/workflows/discordtest.yml
+++ b/.github/workflows/discordtest.yml
@@ -35,7 +35,7 @@ jobs:
       with:
         files: '["**/DISCORD_ANNOUNCEMENT.txt"]'
       env:
-        MOD_NAME: "${{ steps.build.outpus.name }}"
+        MOD_NAME: "${{ steps.build.outputs.name }}"
         URL: "${{ steps.build.outputs.url }}"
         FILE_ID: "${{ steps.publish.outputs.id }}"
 
