--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
     mod_version=1.4.2
     mod_id=ancientspellcraft
     maven_group=com.windanesz.ancientspellcraft
-    name=Ancient Spellcraft by Dan
+    name=Ancient Spellcraft
     jar_name=AncientSpellcraft
     description=Ancient Spellcraft is an addon mod for Electroblob's Wizardry, adding many new spells, mechanics, blocks and a new magical element to the game.
     url=https://www.curseforge.com/minecraft/mc-mods/ancient-spellcraft
