--- a/.github/workflows/create_and_publish_release.yml
+++ b/.github/workflows/create_and_publish_release.yml
@@ -75,7 +75,21 @@ jobs:
           release_type: release
           token: "${{ secrets.CURSEFORGE_API_TOKEN }}"
 
-      - name: Commit Changelogs
+      - name: Update ./forge/update.json latest version
+        uses: jossef/action-set-json-field@v1
+        with:
+          file: ${{ github.workspace }}/.forge/update.json
+          field: promos.'1.12.2-latest'
+          value: ${{ steps.get_version.outputs.VERSION }}
+
+      - name: Update ./forge/update.json recommended version
+        uses: jossef/action-set-json-field@v1
+        with:
+          file: ${{ github.workspace }}/.forge/update.json
+          field: promos.'1.12.2-recommended'
+          value: ${{ steps.get_version.outputs.VERSION }}
+
+      - name: Commit Changelogs and update.json
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           branch: 1.12.2
