--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@
     name=Ancient Spellcraft
     jar_name=AncientSpellcraft
     description=Ancient Spellcraft is an addon mod for Electroblob's Wizardry, adding many new spells, mechanics, blocks and a new magical element to the game.
+    update_url=https://raw.githubusercontent.com/WinDanesz/AncientSpellcraft/1.12.2/.forge/update.json
     url=https://www.curseforge.com/minecraft/mc-mods/ancient-spellcraft
 # Forge Settings
     mc_version=1.12.2
