fix: Fixed biome tag's recipe

--- a/src/main/resources/assets/ancientspellcraft/recipes/biome_tag.json
+++ b/src/main/resources/assets/ancientspellcraft/recipes/biome_tag.json
@@ -5,8 +5,7 @@
             "item": "minecraft:name_tag"
         },
         {
-            "item": "ancientspellcraft:crystal_shard_earth",
-            "data": 5
+            "item": "ancientspellcraft:crystal_shard_earth"
         }
     ],
     "result": {
